Updated slides to remove CBIO prefix (oops).

--- a/OpenScience.ipynb
+++ b/OpenScience.ipynb
@@ -8,9 +8,7 @@
     }
    },
    "source": [
-    "# Lecture 24: Open Science\n",
-    "\n",
-    "CBIO (CSCI) 4835/6835: Introduction to Computational Biology"
+    "# Open Science: Theory and Practice"
    ]
   },
   {
@@ -32,7 +30,13 @@
     }
    },
    "source": [
-    "At this point, you're ready to dive into data science headfirst. One of the best ways to learn more about specific problems is to see how those problems have been addressed so far; reading through existing code can help immensely. But this touches on an important and emerging area of science called \"Open Science.\" By the end of this lecture, you should be able to"
+    "\"Open Science\" is something of an umbrella term encompassing everything related to reproducible, transparent science.\n",
+    "\n",
+    "There have been some complaints that Open Science is amorphous and ambiguous, that its prescription for reproducibility is not, in itself, reproducible.\n",
+    "\n",
+    "However, Open Science is broadly defined and meant to appeal to every area of science, from life sciences to computational sciences to theoretical sciences. What Open Science looks like is field-specific, but there are general principles that cut across all fields of science.\n",
+    "\n",
+    "By the end of this lecture, you should be able to"
    ]
   },
   {
